Fixed Overflow-x

--- a/style.css
+++ b/style.css
@@ -29,6 +29,8 @@ body {
     background-size: cover;
     background-repeat: repeat;
     background-position: center;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 .container {
